--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
     "axios": "^1.6.0",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
@@ -20,6 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "compile": "node-sass ./public/sass/style.scss ./src/App.css -w --source-map true",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
